# nrf53-dual-core-blinky

./: CMakeLists.txt  LICENSE  README.md  nrf5340dk_nrf5340_cpuapp.overlay
common/: button.c  button.h  gpio.c  gpio.h  ipc.c  ipc.h
cpuapp/: blink_thread.c  blink_thread.h  led.c  led.h  main.c
cpunet/: CMakeLists.txt  main.c  nrf5340dk_nrf5340_cpunet.overlay  prj.conf
